# advent-of-code-2021

day-1/: meson.build  part-1.vala  part-2.vala
day-2/: meson.build  part-1.vala  part-2.vala
day-3/: meson.build  part-1.vala  part-2.vala
